Kensei Score Card Dev App/src/objects/Scorecard__c.object
<CustomObject>
    <fields>
        <fullName>Agenda_Feedback_3rd_pt_in_3_pt_agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Better_Terms_Net30__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech/Security call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Better_Terms_less_than_25_deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>References they can call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brief_Training_of_techniques_1_hr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Their NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing tech landscape and stats</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Study_Testimonial_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kick off call booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting with decision makers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collateral_Info_White_Paper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Info/General Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competition_Current_and_Historic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision making timeline, process, who</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Matrix_Differentiators__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Proposals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specific competition and proposals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customized_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Timeline_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redlines back by specific date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_in_the_life__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formal security questionnaire completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defined_Need_Compelling_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defined Need/Compelling Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Agenda_Feedback_3rd_pt_in_3_pt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Agenda_Feedback_3rd_pt_in_3_pt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Case_Study_Testimonial_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Case_Study_Testimonial_Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Champion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Champion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Competition_Current_and_Historic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Competition_Current_and_Historic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Competitive_Proposals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Competitive_Proposals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_DM_Timeline_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_DM_Timeline_Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Defined_Need_Compelling_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Defined_Need_Compelling_Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_External_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_External_Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Final_Decision_Meeting_with_Power__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Final_Decision_Meeting_with_Power</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Internal_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Internal_Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Larger_volume_deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Larger_volume_deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Long_term_contract_monthly_yearly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Long_term_contract_monthly_yearly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Meeting_with_DMs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Meeting_with_DMs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Org_Chart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Org_Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Qualification_Meeting_Accept_Inv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Qualification_Meeting_Accept_Inv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Redline_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Redline_T_C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Sales_team_structure_and_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Sales_team_structure_and_s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Sign_up_for_Kensei_e_mail_list__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Sign_up_for_Kensei_e_mail_list</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Signed_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Signed_Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Success_criteria_and_committed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied_Success_criteria_and_committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Level1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech/Security questions answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Level2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mock ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Examples_of_Training_Techniques__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Examples of Training Techniques</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Our NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Decision_Meeting_with_Power__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Agenda_Feedback_3rd_pt_in_3_pt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Agenda_Feedback_3rd_pt_in_3_pt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Case_Study_Testimonial_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Case_Study_Testimonial_Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Champion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Champion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Competition_Current_and_Historic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Competition_Current_and_Historic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Competitive_Proposals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Competitive_Proposals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_DM_Timeline_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_DM_Timeline_Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Defined_Need_Compelling_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Defined_Need_Compelling_Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_External_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_External_Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Final_Decision_Meeting_with_Power__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Final_Decision_Meeting_with_Power</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Internal_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Internal_Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Larger_volume_deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Larger_volume_deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Long_term_contract_monthly_yearly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Long_term_contract_monthly_yearly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Meeting_with_DMs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Meeting_with_DMs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Org_Chart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Org_Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Qualification_Meeting_Accept_Inv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Qualification_Meeting_Accept_Inv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Redline_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Redline_T_C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Sales_team_structure_and_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Sales_team_structure_and_s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Sign_up_for_Kensei_e_mail_list__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Sign_up_for_Kensei_e_mail_list</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Signed_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Signed_Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Success_criteria_and_committed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got_Success_criteria_and_committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled call with decision makers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larger_volume_deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blessing of IT (in writing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_term_contract_monthly_yearly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed contract/PO Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Non_Decision_Makers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blank MSA for review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_with_DMs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>&quot;Mutual Agenda&quot; feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>More_time_to_make_a_decision_30_days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROC or SAS70 Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Names_of_clients_we_do_business_with__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Better_Terms_Net30__c</fullName>
        <label>Num_Better_Terms_Net30</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Better_Terms_less_than_25_deposit__c</fullName>
        <label>Num_Better_Terms_less_than_25_deposit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Brief_Training_of_techniques_1_hr__c</fullName>
        <label>Num_Brief_Training_of_techniques_1_hr</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Collateral_Info_White_Paper__c</fullName>
        <label>Num_Collateral_Info_White_Paper</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Competitive_Matrix_Differentiators__c</fullName>
        <label>Num_Competitive_Matrix_Differentiators</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Customized_Training__c</fullName>
        <label>Num_Customized_Training</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Day_in_the_life__c</fullName>
        <label>Num_Day_in_the_life</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Discount_Level1__c</fullName>
        <label>Num_Discount_Level1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Discount_Level2__c</fullName>
        <label>Num_Discount_Level2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Examples_of_Training_Techniques__c</fullName>
        <label>Num_Examples_of_Training_Techniques</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Free_Pilot__c</fullName>
        <label>Num_Free_Pilot</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Hold_Date__c</fullName>
        <label>Num_Hold_Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_International_Travel__c</fullName>
        <label>Num_International_Travel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Meeting_Non_Decision_Makers__c</fullName>
        <label>Num_Meeting_Non_Decision_Makers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_More_time_to_make_a_decision_30_days__c</fullName>
        <label>Num_More_time_to_make_a_decision_30_days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Names_of_clients_we_do_business_with__c</fullName>
        <label>Num_Names_of_clients_we_do_business_with</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Pricing_General__c</fullName>
        <label>Num_Pricing_General</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Proposal_with_Plan_Outline__c</fullName>
        <label>Num_Proposal_with_Plan_Outline</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_References_people_they_can_call__c</fullName>
        <label>Num_References_people_they_can_call</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_SOW_Final_Pricing__c</fullName>
        <label>Num_SOW_Final_Pricing</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Web_Presentation__c</fullName>
        <label>Num_Web_Presentation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scorecards</relationshipLabel>
        <relationshipName>Scorecards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Chart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Criteria for tech approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing - General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_with_Plan_Outline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-person meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Meeting_Accept_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>15 minute qualification call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redline_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verbal commit with scheduled DM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>References_people_they_can_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW_Final_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_team_structure_and_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW filled out and returned by date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sign_up_for_Kensei_e_mail_list__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pain points/compelling event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting/Call with decision makers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_criteria_and_committed_next_step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procurement/Legal process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SumGets__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum Gets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumGives__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum Gives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Agenda_Feedback_3rd_pt_in_3_pt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Agenda_Feedback_3rd_pt_in_3_pt</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Better_Terms_Net30__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Better_Terms_Net30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Better_Terms_less_than_25_deposit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Better_Terms_less_than_25_deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Brief_Training_of_techniques_1_hr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Brief_Training_of_techniques_1_hr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Budget</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Case_Study_Testimonial_Logo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Case_Study_Testimonial_Logo</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Champion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Champion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Collateral_Info_White_Paper__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Collateral_Info_White_Paper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Competition_Current_and_Historic__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Competition_Current_and_Historic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Competitive_Matrix_Differentiators__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Competitive_Matrix_Differentiators</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Competitive_Proposals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Competitive_Proposals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Customized_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Customized_Training</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_DM_Timeline_Process__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_DM_Timeline_Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Day_in_the_life__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Day_in_the_life</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Defined_Need_Compelling_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Defined_Need_Compelling_Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Discount_Level1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Discount_Level1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Discount_Level2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Discount_Level2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Examples_of_Training_Techniques__c</fullName>
        <label>Sum_Examples_of_Training_Techniques</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_External_Referral__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_External_Referral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Final_Decision_Meeting_with_Power__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Final_Decision_Meeting_with_Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Free_Pilot__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Free_Pilot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Hold_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Hold_Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Internal_Referral__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Internal_Referral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_International_Travel__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_International_Travel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Larger_volume_deal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Larger_volume_deal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Long_term_contract_monthly_yearly__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Long_term_contract_monthly_yearly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Meeting_Non_Decision_Makers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Meeting_Non_Decision_Makers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Meeting_with_DMs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Meeting_with_DMs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_More_time_to_make_a_decision_30_days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_More_time_to_make_a_decision_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Names_of_clients_we_do_business_with__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Names_of_clients_we_do_business_with</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Org_Chart__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Org_Chart</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Pricing_General__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Pricing_General</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Proposal_with_Plan_Outline__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Proposal_with_Plan_Outline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Qualification_Meeting_Accept_Inv__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Qualification_Meeting_Accept_Inv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Redline_T_C__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Redline_T_C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_References_people_they_can_call__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_References_people_they_can_call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_SOW_Final_Pricing__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_SOW_Final_Pricing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Sales_team_structure_and_s__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Sales_team_structure_and_s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Sign_up_for_Kensei_e_mail_list__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Sign_up_for_Kensei_e_mail_list</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Signed_Contract__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Signed_Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Success_criteria_and_committed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Success_criteria_and_committed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Web_Presentation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum_Web_Presentation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow up call w/o decision makers</label>
        <type>Checkbox</type>
    </fields>
    <label>Scorecard</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>